--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src.ro.ase.csie.cts.sem"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
